# devops

./: .pdm-python  ca.cnf  create_boiler_points_tables.sql  create_table.sql  doris-1.6.1.tgz  generate-cert.sh  kube-install  pg.yml  postgresql.conf  pyproject.toml  reg.yml
alertmanager/: config.yml  dc.yml
app/: dc.yml
certs/: ca.cert  ca.csr  ca.key
cicd/: Dockerfile  bk.md  dc.yml  dc1.yml
clickhouse/: config.xml  dc.yml
data/: boiler_points_reader.sql  gen.py  永兴DCS读写点位_250109v02.numbers
data/永兴DCS读写点位_250109v02/: t.sql  (+10 more)
db/: Makefile  copy_data.py  copy_data.sql  copy_from_memory.py  generate_csv.py  readme.md  test.py  test.sql
dev/: Dockerfile
docker-entrypoint-initdb.d/: 002_setup_locale.sh  003_setup_replication.sh  004_setup_replica.sh
doris/: Chart.yaml  dc.yml  dc1.yml  dc2.yml  dc3.yml  values.yaml
gitlab/: dc.yml  dcc.yml  dr.yml  gitlab.rb  root_password.txt
happ/: Chart.yaml  values.yaml
jumpserver/: config.txt  docker-compose.yml  readme.md
logs/: dc.yml  loki-config.yaml  promtail-config.yaml
minio/: dc.yml  readme  readme.md
monitor/: dc.yml  prometheus.yml  rule.yml
mq/: dc.yml
mysql/: dc.yml  readme.me
nacos/: dc.yml
nginx/: dc.yml
project/: dc.yml
registry/: docker-compose.yml
sdb/: tp.md
spark/: dc.yml  readme.md
starRocks/: dc.yml
tools/: Makefile  push.sh
traefik/: app-network.yml  app-with-entrypoint.yml  app-with-ip.yml  dc.yml  docker-entrypoint.sh  ip-finder.yml  ip-matcher.yml  network-detector.yml  network-inspector.yml  network-test.yml  web-service.yml
vllm/: main.py
xxljob/: dc.yml
(+6 files in other folders)
