[project]
name = "devops"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ylm", email = "ylm@yai.com"},
]
dependencies = ["psycopg2>=2.9.10", "psycopg2-binary>=2.9.10"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
